fix: text overflow

--- a/src/Components/Note/Note.css
+++ b/src/Components/Note/Note.css
@@ -39,6 +39,7 @@
   margin: 8px;
   padding: 10px;
   z-index: 1;
+  word-wrap: break-word;
 }
 
 .note-container h2 {
